src2/objects/Attribute_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Definition_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Attribute Definition UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Attribute_Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Domain</label>
        <referenceTo>Attribute_Domain__c</referenceTo>
        <relationshipLabel>Attribute Definitions</relationshipLabel>
        <relationshipName>Attribute_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Field__c</fullName>
        <label>Case Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Attribute Domain</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Case Field</fullName>
                </value>
                <value>
                    <fullName>Attribute Domain Multi Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Key_Code__c</fullName>
        <label>Language Key Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regex_Description__c</fullName>
        <label>Regex Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regex__c</fullName>
        <label>Regex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <label>Attribute Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Domain__c</columns>
        <columns>Data_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Definitions</pluralLabel>
    <recordTypes>
        <fullName>Definition_Attribute_Domain</fullName>
        <active>true</active>
        <label>Definition Attribute Domain</label>
    </recordTypes>
    <recordTypes>
        <fullName>Definition_Case_Field</fullName>
        <active>true</active>
        <label>Definition Case Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>Definition_Checkbox</fullName>
        <active>true</active>
        <label>Definition Checkbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>Definition_Date</fullName>
        <active>true</active>
        <label>Definition Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>Definition_Text</fullName>
        <active>true</active>
        <label>Definition Text</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Attribute_Domain</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT(Data_Type__c)=&apos;Attribute Domain&apos;,
ISBLANK( Attribute_Domain__c )

)</errorConditionFormula>
        <errorMessage>Attribute Domain must be set</errorMessage>
    </validationRules>
</CustomObject>